--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 03:28:58 AM UTC</h3>
-<h4>as of 2023/05/01 03:28:58 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 04:00:01 AM UTC</h3>
+<h4>as of 2023/05/01 04:00:01 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -168,7 +168,6 @@
 <tr><td>02:33</tr></td>
 <tr><td>02:34</tr></td>
 <tr><td>02:35</tr></td>
-<tr><td>02:36</tr></td>
 <tr><td>02:37</tr></td>
 <tr><td>02:38</tr></td>
 <tr><td>02:39</tr></td>
@@ -1469,6 +1468,7 @@
 <tr><td>01:18 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15806">15806</a></td><td style="text-align: right;">   59.28</td></tr>
 <tr><td>01:48 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15807">15807</a></td><td style="text-align: right;">   38.39</td></tr>
 <tr><td>02:20 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15808">15808</a></td><td style="text-align: right;">   61.44</td></tr>
+<tr><td>02:36 </td><td>Barra333     </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3628">3628</a>       </td><td style="text-align: right;">    2.09</td></tr>
 </tbody>
 </table>
 </div>
@@ -1481,6 +1481,7 @@
 <tbody>
 <tr><td>slammajamma28</td><td style="text-align: right;">      6</td></tr>
 <tr><td>Road2unner   </td><td style="text-align: right;">      1</td></tr>
+<tr><td>Barra333     </td><td style="text-align: right;">      1</td></tr>
 </tbody>
 </table>
 </div>
@@ -1502,69 +1503,69 @@
 <div id="Barra333" class="user_table" style="display:none">
 <table>
 <thead>
-<tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
+<tr><th>Log#                                                                                </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
 </thead>
 <tbody>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3628">3628</a></td><td>2.09    </td><td style="text-align: right;">       42</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
 <div id="Blood_Velvet" class="user_table" style="display:none">
