--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 01:00:02 PM UTC</h3>
-<h4>as of 2023/05/01 01:00:02 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 02:00:02 PM UTC</h3>
+<h4>as of 2023/05/01 02:00:02 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -618,16 +618,13 @@
 <tr><td>10:15</tr></td>
 <tr><td>10:16</tr></td>
 <tr><td>10:17</tr></td>
-<tr><td>10:18</tr></td>
 <tr><td>10:19</tr></td>
 <tr><td>10:20</tr></td>
 <tr><td>10:21</tr></td>
-<tr><td>10:22</tr></td>
 <tr><td>10:23</tr></td>
 <tr><td>10:24</tr></td>
 <tr><td>10:25</tr></td>
 <tr><td>10:26</tr></td>
-<tr><td>10:27</tr></td>
 <tr><td>10:28</tr></td>
 <tr><td>10:29</tr></td>
 <tr><td>10:30</tr></td>
@@ -636,7 +633,6 @@
 <tr><td>10:33</tr></td>
 <tr><td>10:34</tr></td>
 <tr><td>10:35</tr></td>
-<tr><td>10:36</tr></td>
 <tr><td>10:37</tr></td>
 <tr><td>10:38</tr></td>
 <tr><td>10:39</tr></td>
@@ -648,7 +644,6 @@
 <tr><td>10:45</tr></td>
 <tr><td>10:46</tr></td>
 <tr><td>10:47</tr></td>
-<tr><td>10:48</tr></td>
 <tr><td>10:49</tr></td>
 <tr><td>10:50</tr></td>
 <tr><td>10:51</tr></td>
@@ -751,13 +746,11 @@
 <tr><td>12:29</tr></td>
 <tr><td>12:30</tr></td>
 <tr><td>12:31</tr></td>
-<tr><td>12:32</tr></td>
 <tr><td>12:33</tr></td>
 <tr><td>12:34</tr></td>
 <tr><td>12:35</tr></td>
 <tr><td>12:36</tr></td>
 <tr><td>12:37</tr></td>
-<tr><td>12:38</tr></td>
 <tr><td>12:39</tr></td>
 <tr><td>12:40</tr></td>
 <tr><td>12:41</tr></td>
@@ -799,17 +792,13 @@
 <tr><td>13:18</tr></td>
 <tr><td>13:19</tr></td>
 <tr><td>13:20</tr></td>
-<tr><td>13:21</tr></td>
-<tr><td>13:22</tr></td>
 <tr><td>13:23</tr></td>
 <tr><td>13:24</tr></td>
 <tr><td>13:25</tr></td>
 <tr><td>13:26</tr></td>
 <tr><td>13:27</tr></td>
-<tr><td>13:28</tr></td>
 <tr><td>13:29</tr></td>
 <tr><td>13:30</tr></td>
-<tr><td>13:31</tr></td>
 <tr><td>13:32</tr></td>
 <tr><td>13:33</tr></td>
 <tr><td>13:34</tr></td>
@@ -1467,8 +1456,19 @@
 <tr><td>08:01 </td><td>Dolken_swe   </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18885">18885</a>   </td><td style="text-align: right;">   18.24</td></tr>
 <tr><td>08:55 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a> </td><td style="text-align: right;">   43.95</td></tr>
 <tr><td>09:14 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a> </td><td style="text-align: right;">   41   </td></tr>
+<tr><td>10:18 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14864">14864</a> </td><td style="text-align: right;">   94.35</td></tr>
+<tr><td>10:22 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14865">14865</a> </td><td style="text-align: right;">   92.09</td></tr>
+<tr><td>10:27 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14866">14866</a> </td><td style="text-align: right;">   93.22</td></tr>
+<tr><td>10:36 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14867">14867</a> </td><td style="text-align: right;">   85.31</td></tr>
+<tr><td>10:48 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14868">14868</a> </td><td style="text-align: right;">   83.05</td></tr>
 <tr><td>12:10 </td><td>Road2unner   </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19118">19118</a>   </td><td style="text-align: right;">    6.36</td></tr>
+<tr><td>12:32 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14869">14869</a> </td><td style="text-align: right;">   75.42</td></tr>
+<tr><td>12:38 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14870">14870</a> </td><td style="text-align: right;">   78.81</td></tr>
 <tr><td>13:00 </td><td>Road2unner   </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19119">19119</a>   </td><td style="text-align: right;">   14.66</td></tr>
+<tr><td>13:21 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14871">14871</a> </td><td style="text-align: right;">   77.4 </td></tr>
+<tr><td>13:22 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14872">14872</a> </td><td style="text-align: right;">   79.94</td></tr>
+<tr><td>13:28 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14873">14873</a> </td><td style="text-align: right;">   80.51</td></tr>
+<tr><td>13:31 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14875">14875</a> </td><td style="text-align: right;">   74.86</td></tr>
 </tbody>
 </table>
 </div>
@@ -1479,10 +1479,10 @@
 <tr><th>User         </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
+<tr><td>staytrue1985 </td><td style="text-align: right;">     13</td></tr>
 <tr><td>Jerry_Appleby</td><td style="text-align: right;">      8</td></tr>
 <tr><td>slammajamma28</td><td style="text-align: right;">      6</td></tr>
 <tr><td>Road2unner   </td><td style="text-align: right;">      3</td></tr>
-<tr><td>staytrue1985 </td><td style="text-align: right;">      2</td></tr>
 <tr><td>Barra333     </td><td style="text-align: right;">      1</td></tr>
 <tr><td>Dolken_swe   </td><td style="text-align: right;">      1</td></tr>
 </tbody>
@@ -2683,8 +2683,8 @@
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14868">14868</a></td><td>83.05   </td><td style="text-align: right;">       06</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14864">14864</a></td><td>94.35   </td><td style="text-align: right;">       07</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
@@ -2701,26 +2701,26 @@
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14875">14875</a></td><td>74.86   </td><td style="text-align: right;">       24</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14867">14867</a></td><td>85.31   </td><td style="text-align: right;">       29</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14873">14873</a></td><td>80.51   </td><td style="text-align: right;">       30</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a></td><td>43.95   </td><td style="text-align: right;">       33</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14871">14871</a></td><td>77.40   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14865">14865</a></td><td>92.09   </td><td style="text-align: right;">       40</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14866">14866</a></td><td>93.22   </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
@@ -2728,12 +2728,12 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a></td><td>41.00   </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14869">14869</a></td><td>75.42   </td><td style="text-align: right;">       51</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14872">14872</a></td><td>79.94   </td><td style="text-align: right;">       52</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14870">14870</a></td><td>78.81   </td><td style="text-align: right;">       56</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
